--- a/PySchool_Main.ipynb
+++ b/PySchool_Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "school_path = \"/Users/kscomputer/Desktop/PyCitySchools/pandas-challenge/Resources/students_complete.csv\""
+    "school_path = \"/Users/kscomputer/Desktop/PyCitySchools/pandas-challenge/Resources/students_complete.csv\"\n",
+    "district_path = \"/Users/kscomputer/Desktop/PyCitySchools/pandas-challenge/Resources/schools_complete.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -44,95 +45,78 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Student ID</th>\n",
-       "      <th>student_name</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>grade</th>\n",
+       "      <th>School ID</th>\n",
        "      <th>school_name</th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>math_score</th>\n",
+       "      <th>type</th>\n",
+       "      <th>size</th>\n",
+       "      <th>budget</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>Paul Bradley</td>\n",
-       "      <td>M</td>\n",
-       "      <td>9th</td>\n",
        "      <td>Huang High School</td>\n",
-       "      <td>66</td>\n",
-       "      <td>79</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>1910635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>Victor Smith</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>94</td>\n",
-       "      <td>61</td>\n",
+       "      <td>Figueroa High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>1884411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>Kevin Rodriguez</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>90</td>\n",
-       "      <td>60</td>\n",
+       "      <td>Shelton High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1761</td>\n",
+       "      <td>1056600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Dr. Richard Scott</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>67</td>\n",
-       "      <td>58</td>\n",
+       "      <td>Hernandez High School</td>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>3022020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Bonnie Ray</td>\n",
-       "      <td>F</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>97</td>\n",
-       "      <td>84</td>\n",
+       "      <td>Griffin High School</td>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>917500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Student ID       student_name gender grade        school_name  \\\n",
-       "0           0       Paul Bradley      M   9th  Huang High School   \n",
-       "1           1       Victor Smith      M  12th  Huang High School   \n",
-       "2           2    Kevin Rodriguez      M  12th  Huang High School   \n",
-       "3           3  Dr. Richard Scott      M  12th  Huang High School   \n",
-       "4           4         Bonnie Ray      F   9th  Huang High School   \n",
-       "\n",
-       "   reading_score  math_score  \n",
-       "0             66          79  \n",
-       "1             94          61  \n",
-       "2             90          60  \n",
-       "3             67          58  \n",
-       "4             97          84  "
+       "   School ID            school_name      type  size   budget\n",
+       "0          0      Huang High School  District  2917  1910635\n",
+       "1          1   Figueroa High School  District  2949  1884411\n",
+       "2          2    Shelton High School   Charter  1761  1056600\n",
+       "3          3  Hernandez High School  District  4635  3022020\n",
+       "4          4    Griffin High School   Charter  1468   917500"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "district_df = pd.read_csv(district_path)\n",
+    "\n",
     "school_df = pd.read_csv(school_path)\n",
     "\n",
-    "school_df.head()"
+    "district_df.head()"
    ]
   },
   {
