--- a/PySchool_Main.ipynb
+++ b/PySchool_Main.ipynb
@@ -422,6 +422,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#average math, reading for district \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
    "outputs": [
@@ -464,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#"
+    "#school budget total\n"
    ]
   },
   {
