--- a/PySchool_Main.ipynb
+++ b/PySchool_Main.ipynb
@@ -1201,9 +1201,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fb81587e208>"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#here to make percent and average easier\n",
     "schools_name = merged_df.set_index('school_name').groupby(['school_name'])"
@@ -1211,16 +1222,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 217,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         Huang High School\n",
+       "1      Figueroa High School\n",
+       "2       Shelton High School\n",
+       "3     Hernandez High School\n",
+       "4       Griffin High School\n",
+       "5        Wilson High School\n",
+       "6       Cabrera High School\n",
+       "7        Bailey High School\n",
+       "8        Holden High School\n",
+       "9          Pena High School\n",
+       "10       Wright High School\n",
+       "11    Rodriguez High School\n",
+       "12      Johnson High School\n",
+       "13         Ford High School\n",
+       "14       Thomas High School\n",
+       "Name: school_name, dtype: object"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "school_names = district_charter_df['school_name']\n",
+    "\n",
+    "school_names\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1284,7 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,38 +1297,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "school_name\n",
-       "Bailey High School       4976\n",
-       "Cabrera High School      1858\n",
-       "Figueroa High School     2949\n",
-       "Ford High School         2739\n",
-       "Griffin High School      1468\n",
-       "Hernandez High School    4635\n",
-       "Holden High School        427\n",
-       "Huang High School        2917\n",
-       "Johnson High School      4761\n",
-       "Pena High School          962\n",
-       "Rodriguez High School    3999\n",
-       "Shelton High School      1761\n",
-       "Thomas High School       1635\n",
-       "Wilson High School       2283\n",
-       "Wright High School       1800\n",
-       "Name: Student ID, dtype: int64"
+       "0     2917\n",
+       "1     2949\n",
+       "2     1761\n",
+       "3     4635\n",
+       "4     1468\n",
+       "5     2283\n",
+       "6     1858\n",
+       "7     4976\n",
+       "8      427\n",
+       "9      962\n",
+       "10    1800\n",
+       "11    3999\n",
+       "12    4761\n",
+       "13    2739\n",
+       "14    1635\n",
+       "Name: size, dtype: int64"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "student_per_school = schools_name['Student ID'].count()\n",
+    "student_per_school = district_charter_df['size']\n",
     "\n",
     "student_per_school"
    ]
@@ -1525,31 +1563,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-174-80905613cb0b>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-174-80905613cb0b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    percent_math_reading_school = ((merged_df['math_score']>=70)& (merged_df['reading_score']>=70).groupby('school_name')['Student ID'].count())/student_per_school)*100\u001b[0m\n\u001b[0m                                                                                                                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Bailey High School      NaN\n",
+       "Cabrera High School     NaN\n",
+       "Figueroa High School    NaN\n",
+       "Ford High School        NaN\n",
+       "Griffin High School     NaN\n",
+       "Hernandez High School   NaN\n",
+       "Holden High School      NaN\n",
+       "Huang High School       NaN\n",
+       "Johnson High School     NaN\n",
+       "Pena High School        NaN\n",
+       "Rodriguez High School   NaN\n",
+       "Shelton High School     NaN\n",
+       "Thomas High School      NaN\n",
+       "Wilson High School      NaN\n",
+       "Wright High School      NaN\n",
+       "0                       NaN\n",
+       "1                       NaN\n",
+       "2                       NaN\n",
+       "3                       NaN\n",
+       "4                       NaN\n",
+       "5                       NaN\n",
+       "6                       NaN\n",
+       "7                       NaN\n",
+       "8                       NaN\n",
+       "9                       NaN\n",
+       "10                      NaN\n",
+       "11                      NaN\n",
+       "12                      NaN\n",
+       "13                      NaN\n",
+       "14                      NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "percent_math_reading_school = ((merged_df['math_score']>=70)& (merged_df['reading_score']>=70).groupby('school_name')['Student ID'].count())/student_per_school)*100\n",
-    "percent_math_reading_school\n"
+    "math_reading_per_school = merged_df[(merged_df['math_score']>=70)&(merged_df['reading_score']>=70)].groupby('school_name')['Student ID'].count()/student_per_school\n",
+    "\n",
+    "percent_overall = (math_reading_per_school)*100\n",
+    "\n",
+    "percent_overall\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 212,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0         Huang High School\n",
+       "1      Figueroa Hi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         School Name\n",
+       "0  0         Huang High School\n",
+       "1      Figueroa Hi..."
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1557,7 +1673,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "summary_schools = {'School Name':[school_names],\n",
+    "                  'School Type': [schools_type]}\n",
+    "\n",
+    "summary_schools_df = pd.DataFrame(data=summary_schools)\n",
+    "\n",
+    "                    \n",
+    "\n",
+    "\n",
+    "summary_schools_df\n"
    ]
   },
   {
