--- a/PySchool_Main.ipynb
+++ b/PySchool_Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "4          4    Griffin High School   Charter  1468   917500"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "4             97          84  "
       ]
      },
-     "execution_count": 270,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 271,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "11         11  Rodriguez High School  District  3999  2547363"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "7"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        "26976"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "17347923"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "[26976 rows x 7 columns]"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
        "Name: school_name, dtype: int64"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
        "76.98702550415184"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
        "80.96248517200475"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        "66.51838671411625"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
        "80.90524911032028"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
        "53.695877817319094"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +961,7 @@
        "0              80.962485       66.518387          80.905249          53.695878  "
       ]
      },
-     "execution_count": 284,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
        "[39170 rows x 6 columns]"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
        "Name: budget, dtype: object"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
        "Name: size, dtype: object"
       ]
      },
-     "execution_count": 356,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 357,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1356,7 @@
        "Name: math_score, dtype: float64"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
        "Name: reading_score, dtype: float64"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
        "Name: budget, dtype: float64"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1472,7 @@
        "Name: budget, dtype: float64"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1512,7 @@
        "Name: budget, dtype: float64"
       ]
      },
-     "execution_count": 328,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1848,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 358,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1867,6 +1867,204 @@
     "                  })\n",
     "school_summary"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "top_five = school_summary.sort_value('% Overall Passing')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>[District]</td>\n",
+       "      <td>[3999]</td>\n",
+       "      <td>[2547363]</td>\n",
+       "      <td>[637.0]</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>[District]</td>\n",
+       "      <td>[2949]</td>\n",
+       "      <td>[1884411]</td>\n",
+       "      <td>[639.0]</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>[District]</td>\n",
+       "      <td>[2917]</td>\n",
+       "      <td>[1910635]</td>\n",
+       "      <td>[655.0]</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>[District]</td>\n",
+       "      <td>[4635]</td>\n",
+       "      <td>[3022020]</td>\n",
+       "      <td>[652.0]</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>[District]</td>\n",
+       "      <td>[4761]</td>\n",
+       "      <td>[3094650]</td>\n",
+       "      <td>[650.0]</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type Total Students Total School Budget  \\\n",
+       "school_name                                                            \n",
+       "Rodriguez High School  [District]         [3999]           [2547363]   \n",
+       "Figueroa High School   [District]         [2949]           [1884411]   \n",
+       "Huang High School      [District]         [2917]           [1910635]   \n",
+       "Hernandez High School  [District]         [4635]           [3022020]   \n",
+       "Johnson High School    [District]         [4761]           [3094650]   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "school_name                                                    \n",
+       "Rodriguez High School            [637.0]           76.842711   \n",
+       "Figueroa High School             [639.0]           76.711767   \n",
+       "Huang High School                [655.0]           76.629414   \n",
+       "Hernandez High School            [652.0]           77.289752   \n",
+       "Johnson High School              [650.0]           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "school_name                                                    \n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "school_name                                                  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bottom_five = school_summary.sort_values('% Overall Passing')\n",
+    "\n",
+    "bottom_five.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
