Key observations added
done

--- a/PySchool_Main.ipynb
+++ b/PySchool_Main.ipynb
@@ -3857,30 +3857,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Average Math Score        float64\n",
-       "Average Reading Score     float64\n",
-       "% Passing Math            float64\n",
-       "% Passing Reading         float64\n",
-       "% Overall Passing         float64\n",
-       "Total Students             object\n",
-       "School Size              category\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "size_s.dtypes"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -4471,7 +4451,7 @@
     }
    ],
    "source": [
-    "chartdis_s.groupby('School Type')"
+    "chartdis_s.groupby('School Type').mean()"
    ]
   },
   {
